# machine-learning-bak

./: readme.md
note/: OpenCV.md
opencv/cpp/: CMakeLists.txt
opencv/cpp/day01-Vec/: CMakeLists.txt  build.bat  day01-Vec.cpp  day01-Vec.h  debugger.bat
